I wanna set the universe on fire

--- a/.github/workflows/byond.yml
+++ b/.github/workflows/byond.yml
@@ -27,6 +27,7 @@ jobs:
           pip install --user -r ./tools/requirements.txt
           chmod +x ./scripts/code_check.sh && ./scripts/code_check.sh $PWD
           bash tools/ci/install_spaceman_dmm.sh dreamchecker
+          bash tools/ci/setup_od.sh
       - name: Code checks
         run: |
           awk -f tools/indentation.awk **/*.dm
@@ -37,6 +38,9 @@ jobs:
       - name: Run dreamchecker
         id: runDreamchecker
         run: ~/dreamchecker > ${GITHUB_WORKSPACE}/output-annotations.txt 2>&1
+      - name: Run OpenDream Lint
+        id: runOpenDreamLint
+        run: bash tools/ci/run_od.sh
       - name: Annotate Lints
         if: failure() && steps.runDreamchecker.outcome == 'failure'
         uses: yogstation13/DreamAnnotate@v2
